# macmahon

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
macmahon/: constants.py  game.py  helpers.py  pairings.py  parameters.py  player.py  standings.py  utils.py
tests/: helpers.py  test_game.py  test_player.py  test_standings.py  test_utils.py
