[tool.poetry]
name = "macmahon"
version = "0.1.0"
description = ""
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@eleks.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
Faker = "^15.0.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
