[tool.poetry]
name = "macmahon"
version = "0.1.0"
description = ""
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@eleks.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pydantic = "^1.10.2"
networkx = {extras = ["default"], version = "^2.8.6"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
Faker = "^15.0.0"
pre-commit = "^2.20.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
